# ml_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  launch.json  tasks.json
dataset/: explain.txt
include/: coheir.h  data.h  data_handler.h
kmeans/: CMakeLists.txt  kmeans.cpp  kmeans.h
kmeans/include/: kmeans.h
kmeans/src/: kmeans.cpp  main.cpp
knn/: CMakeLists.txt  knn.cpp  knn.h
knn/include/: knn.h
knn/src/: knn.cpp  main.cpp
lib/: CMakeLists.txt  data_handler.cpp
src/: coheir.cpp  data.cpp  data_handler.cpp  main.cpp
